# encryption-tool

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  encryption_tool.h  handler.h  main.cc  simple_xor.cc  simple_xor.h
test/: CMakeLists.txt  simple_xor_test.cc
